--- a/static/html/index.html
+++ b/static/html/index.html
@@ -3,10 +3,15 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Titel</title>
+    <title>Shared Canvas</title>
     <style>
         body{font-family: sans-serif;background: #eee;margin: 0;display: flex;flex-direction:column;align-items: center;justify-content: center;height: 100vh;}
         canvas{background: #fff;} a{margin: 20px}
+        ul{display: grid; grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr auto;
+          grid-template-areas: ". . . . . . . . clear" ". . . . . . . . clear"; padding: 0}
+        .colorSwatch{display: block; width: 1.5em; height: 1.5em}
+        .clearButton{display: flex; align-items: center; justify-content: center; width: 5em; height: 3em; grid-area: clear; background: #666; color: white; cursor: pointer}
+        .colorSwatch.active{box-shadow: 0 0 0 5px #fff inset}
     </style>
     <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.0.3/socket.io.js"></script>
@@ -15,5 +20,24 @@
   <body>
     <a href="https://github.com/n1060025/websocket-draw">https://github.com/n1060025/websocket-draw</a>
     <canvas id="canvas" width="400" height="400"></canvas>
+    <ul>
+      <li class="colorSwatch" data-color="#111111" style="background: #111111" ></li>
+      <li class="colorSwatch" data-color="#001f3f" style="background: #001f3f" ></li>
+      <li class="colorSwatch" data-color="#0074D9" style="background: #0074D9" ></li>
+      <li class="colorSwatch" data-color="#7FDBFF" style="background: #7FDBFF" ></li>
+      <li class="colorSwatch" data-color="#39CCCC" style="background: #39CCCC" ></li>
+      <li class="colorSwatch" data-color="#3D9970" style="background: #3D9970" ></li>
+      <li class="colorSwatch" data-color="#2ECC40" style="background: #2ECC40" ></li>
+      <li class="colorSwatch" data-color="#01FF70" style="background: #01FF70" ></li>
+      <li class="colorSwatch" data-color="#FFDC00" style="background: #FFDC00" ></li>
+      <li class="colorSwatch" data-color="#FF851B" style="background: #FF851B" ></li>
+      <li class="colorSwatch" data-color="#FF4136" style="background: #FF4136" ></li>
+      <li class="colorSwatch" data-color="#85144b" style="background: #85144b" ></li>
+      <li class="colorSwatch" data-color="#F012BE" style="background: #F012BE" ></li>
+      <li class="colorSwatch" data-color="#B10DC9" style="background: #B10DC9" ></li>
+      <li class="colorSwatch" data-color="#AAAAAA" style="background: #AAAAAA" ></li>
+      <li class="colorSwatch" data-color="#DDDDDD" style="background: #DDDDDD" ></li>
+      <li class="clearButton">clear</li>
+    </ul>
   </body>
 </html>
