persist drawings in backend + general refactoring

--- a/static/html/index.html
+++ b/static/html/index.html
@@ -9,7 +9,7 @@
         canvas{background: #fff;} a{margin: 20px}
         ul{display: grid; grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr auto;
           grid-template-areas: ". . . . . . . . clear" ". . . . . . . . clear"; padding: 0}
-        .colorSwatch{display: block; width: 1.5em; height: 1.5em}
+        .colorSwatch{display: inline-block; width: 1.5em; height: 1.5em}
         .clearButton{display: flex; align-items: center; justify-content: center; width: 5em; height: 3em; grid-area: clear; background: #666; color: white; cursor: pointer}
         .colorSwatch.active{box-shadow: 0 0 0 5px #fff inset}
     </style>
