css is external, added prefixing

--- a/static/html/index.html
+++ b/static/html/index.html
@@ -4,29 +4,11 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shared Canvas</title>
-    <style>
-        body{min-width: 500px; font-family: sans-serif;background: #eee;margin: 0;display: flex;flex-direction:column;align-items: center;justify-content: center; height: 100vh;}
-        canvas{background: #fff;}
-        .colors{display: grid; grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr auto;
-          grid-template-areas: ". . . . . . . . userCount" ". . . . . . . . userCount"; padding: 0}
-        .colorSwatch{display: inline-block; width: 1.5em; height: 1.5em}
-        .userCount{display: block; text-align: center; width: 5em; height: 3em; grid-area: userCount; background: #666; color: white; line-height: 45px}
-        .userCount span{margin: 2px}
-        .colorSwatch.active{box-shadow: 0 0 0 2px #fff inset, 0 0 10px -2px; z-index: 2}
-        section.draw{display: flex; flex-direction: column; align-items: center}
-        .hidden{display: none !important}
-        .userlist{position: absolute; top: 20px; left: 10px;}
-        #username-form{width: 455px; display: flex; flex-wrap: wrap} #username-form>p{text-align: justify;margin: 5px 0; flex-basis: 100%}
-        #username-form>input{flex-grow: 1; margin-right: 8px; padding-left: 4px}
-        #srcCodeLink{position: fixed; bottom: 0px; margin-bottom: 5px; font-size: 0.8em}
-        .spinner{margin-bottom: -500px; height: 500px; width: 500px; background: #fff; z-index: 1; display: flex; flex-direction: column; align-items: center; justify-content: center;}
-        .spinner:before{content: ""; display: block; width: 80px; height: 80px; background: url('https://loading.io/spinners/double-ring/index.double-ring-spinner.svg');}
-        .spinner:after{content:"Connecting..."}
-    </style>
     <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.0.3/socket.io.js"></script>
     <script src="/static/js/index.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css"></link>
+    <link rel="stylesheet" href="/static/css/main.css"></link>
   </head>
   <body>
       <p id="srcCodeLink"> source: <a href="https://github.com/n1060025/websocket-draw">https://github.com/n1060025/websocket-draw</a></p>
